Fix homepage filters